--- a/src/App.css
+++ b/src/App.css
@@ -36,3 +36,11 @@
     transform: rotate(360deg);
   }
 }
+
+label {
+  border: 1px solid #edece8;
+  border-radius: 5px;
+  padding: 2px; 
+  width: 450px;
+  height: 300px; 
+}
