--- a/src/App.css
+++ b/src/App.css
@@ -38,9 +38,12 @@
 }
 
 label {
-  border: 1px solid #edece8;
-  border-radius: 5px;
   padding: 2px; 
   width: 450px;
   height: 300px; 
+}
+
+fieldset {
+  border: 1px solid #edece8;
+  border-radius: 5px;
 }
