--- a/src/App.css
+++ b/src/App.css
@@ -38,12 +38,17 @@
 }
 
 label {
+  font-size: 24px;
   padding: 2px; 
-  width: 450px;
-  height: 300px; 
+  width: 100px;
+  height: 50px; 
 }
 
 fieldset {
   border: 1px solid #edece8;
   border-radius: 5px;
+}
+
+.crossed-line {
+  text-decoration: line-through;
 }
